Fixes scrollbars always appearing in panes.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -78,11 +78,11 @@ img {
 }
 
 .wrap {
-  min-width: 100vw;
+  min-width: 14vw;
 }
 
 .center-view ul.nav-tabs {
-  min-width: 100vw;
+  min-width: 15vw;
 }
 
 ul.nav-tabs > li > a{
